# 2026_pi_workflows

./: .gitignore  README.md  pyproject.toml  requirements.txt
document/workflows/: pi_bookworkflow.md
source/workflows/: pi_bookworkflow.py
