[project]
name = "2026-pi-workflows"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.10.2",
    "markitdown>=0.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "weasyprint>=69.0",
]

[project.scripts]
booksummary = "workflows.pi_bookworkflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/workflows"]
